05/04/23
Initial project set up and connected to github repo
- Basic tile script added
    - stores its position, its state and corresponding object
    - Can change color
- Basic tilegrid script added
    - Controls the basics of the grid
    - Can spawn a grid of any size
    - Aligns the grid to the centre of the screen

06/04/23
Can now add rooms by pressing spacebar
-work beginning on BSP
-Basic BSP finished
    - BSP only partitions perfect 50/50's, i.e. straight down the middle
    - BSP partitions randomly either horizontally or vertically

03/05/23
Long hiatus due to group project
- Reset the project for a clean start 
- Project will be split into different sections : 
    - grid generation (deciding tile shape, size etc)
    - grid terrain (holes, chasms etc that decide where structres can generate)
    - Room distribution (how are rooms spread out? randomly? BSP's ? room accretion etc)
    - Room shape 
    - Room details (machines, etc)

04/05/23
Basic grid generation implemented
    - Only square tiles so far
Basic Camera controls added
    - Can move up and down with Q and E 

09/05/23
Grid can now generate hexagonal lattices alongside original square lattices
    - Tiles now store their position on the grid and can get their neighbour tiles (works for hex grid)
    - For testing purposes, tiles can be clicked which will highlight them and their neigbour tiles
    - Next will be to work on grid terrain, adding noise to simulate terrain such as hills, holes, chasms etc