@@ -1,0 +1,11 @@
+fileFormatVersion: 2
+guid: 15f245bb7a47c8c448d696fc69b7c980
+MonoImporter:
+  externalObjects: {}
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
