@@ -11,10 +11,18 @@ public class Tile : MonoBehaviour
     private Vector2Int coords;
     private List<Tile> Neighbours = new List<Tile>();
     private MaterialPropertyBlock block;
+    private Color currColor;
+    private static Color defaultColor = Color.black;
     public void Init(Vector2Int _coords)
     {
         coords = _coords;
     }
+    public enum TileType
+    {
+        blank,
+        terrain
+    }
+    public TileType type = TileType.blank;
     public List<Tile> GetNeighbours()
     {
         Neighbours = new List<Tile>();
@@ -60,6 +68,7 @@ public class Tile : MonoBehaviour
         Vector2Int coord = coords + offset;
         Tile newTile = TileGrid.instance.GetTile(coord);
         if(newTile == null){return;}
+        if(!TileGrid.instance.highlightTerrain && newTile.type == TileType.terrain){return;}
         if(Neighbours.Contains(newTile)){return;}
         Neighbours.Add(newTile);
     }
@@ -67,7 +76,7 @@ public class Tile : MonoBehaviour
     {
         block = new MaterialPropertyBlock();
         this.GetComponent<Renderer>().GetPropertyBlock(block);
-        Color col = _highLight ? Color.white : Color.black;
+        Color col = _highLight ? Color.white : currColor;
         block.SetColor("_BaseColor", col);
         this.GetComponent<Renderer>().SetPropertyBlock(block);
     }
@@ -75,7 +84,10 @@ public class Tile : MonoBehaviour
     {
         if(Input.GetMouseButton(0))
         {
-            HighlightTile(true);
+            if(TileGrid.instance.highlightTerrain || type != TileType.terrain)
+            {
+                HighlightTile(true);
+            }
             foreach(Tile tile in GetNeighbours())
             {
                 tile.HighlightTile(true);
@@ -89,6 +101,28 @@ public class Tile : MonoBehaviour
             tile.HighlightTile(false);
         }
         HighlightTile(false);
+    }
+    public void PaintTile(Color _paintColor, TileType _type)
+    {
+        type = _type;
+        block = new MaterialPropertyBlock();
+        this.GetComponent<Renderer>().GetPropertyBlock(block);
+        block.SetColor("_BaseColor", _paintColor);
+        currColor = _paintColor;
+        this.GetComponent<Renderer>().SetPropertyBlock(block);
+    }
+    public void ResetColor()
+    {
+        type = TileType.blank;
+        block = new MaterialPropertyBlock();
+        this.GetComponent<Renderer>().GetPropertyBlock(block);
+        block.SetColor("_BaseColor", defaultColor);
+        currColor = defaultColor;
+        this.GetComponent<Renderer>().SetPropertyBlock(block);
+    }
+    public Vector2Int GetCoords()
+    {
+        return coords;
     }
 }
 
