@@ -1,3 +1,7 @@
+=====================================================
+mark scheme : 50% theory 37.5% practical 12.5% poster
+=====================================================
+
 05/04/23
 Initial project set up and connected to github repo
 - Basic tile script added
@@ -14,6 +18,7 @@ Can now add rooms by pressing spacebar
 -Basic BSP finished
     - BSP only partitions perfect 50/50's, i.e. straight down the middle
     - BSP partitions randomly either horizontally or vertically
+
 
 03/05/23
 Long hiatus due to group project
@@ -36,3 +41,8 @@ Grid can now generate hexagonal lattices alongside original square lattices
     - Tiles now store their position on the grid and can get their neighbour tiles (works for hex grid)
     - For testing purposes, tiles can be clicked which will highlight them and their neigbour tiles
     - Next will be to work on grid terrain, adding noise to simulate terrain such as hills, holes, chasms etc
+
+11/05/23
+Grid can now generate some noise
+    - Perlin noise with some controllable values
+    - Random nosie
